fix(Index): integrated Warrify (and improved alignments)
Closes #204

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -1,7 +1,7 @@
 .img-logo {
-    width: 50px;
+  height: 50px;
 }
 
 .img-logo-company {
-    width: 100px;
+  height: 100px;
 }
